Fix minor spacing issues in UI on smaller screens

--- a/client/src/routes/App/NewUser/NewUser.scoped.scss
+++ b/client/src/routes/App/NewUser/NewUser.scoped.scss
@@ -11,7 +11,7 @@
 }
 
 .brand {
-  margin-top: 2rem;
+  margin-top: 1rem;
   filter: drop-shadow(0 0 20px rgba($primary, 0.5));
 }
 
