--- a/client/src/routes/App/Settings/Settings.scoped.scss
+++ b/client/src/routes/App/Settings/Settings.scoped.scss
@@ -13,7 +13,7 @@
   }
 
   .btn.save {
-    margin-top: 6rem;
+    margin-top: 3.75rem;
   }
 
   hr {
@@ -32,8 +32,8 @@
   }
 
   p.clear-all-data-help {
-    text-align: center;
     margin-top: 1.75rem;
+    margin-bottom: 0;
     color: $secondary;
   }
 }
